--- a/content/03-LeetCode/Problems/0071.Simplify_Path.md
+++ b/content/03-LeetCode/Problems/0071.Simplify_Path.md
@@ -2,7 +2,7 @@
 tags:
   - ds/stack
 ---
-## Question
+# Question
 [71. Simplify Path](https://leetcode.com/problems/simplify-path/) - Medium
 ### Restate the problem
 Given a string, Unix-style absolute path, return simplified **canonical** path.
