--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -251,5 +251,11 @@ Solve Type: Answer, bad explanation
 - Mistake: Space complexity should be O(1)
 
 ### Jan-15
-###### LC200
-- Answered
+#### Leetcode
+[[0200.Number_of_Islands]]
+- Solved, explanation was not clear
+[[0217.Contains_Duplicate]] 
+- Solved
+[[0133.Clone_Graph]]
+- peeked, with strong hint
+	- node is used, name cur instead
