--- a/content/03-LeetCode/Problems/0200.Number_of_Islands.md
+++ b/content/03-LeetCode/Problems/0200.Number_of_Islands.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - algorithm/bfs
+  - ds/graphs
 ---
 # Question
 Link: [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
@@ -11,8 +11,8 @@ Link: [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
 # Approach
 ### Method - BFS
 - Scan every cell. If I see a `'1'` that I haven’t visited, that means I found a new island, so I do `res += 1`.  
-- Then I run **BFS** from that cell using a queue and expand in 4 directions. Any neighbor that’s inside the grid and is `'1'` and not visited, I add it to the queue and mark it visited.
-- After BFS finishes, all land in that island is marked, so I won’t count it again.
+- Then I run **BFS** starting from that cell. I use a queue and expand in four directions. If a neighbor is in bounds, is `'1'`, and hasn’t been visited, I add it to the queue and mark it as visited.
+- After BFS finishes, BFS finishes, all connected land cells in that island are marked as visited, so I won’t count the same island again.
 ### Complexity
 - Time Complexity: O($m*n$)
 - Space Complexity: O($m*n$)
@@ -51,3 +51,7 @@ class Solution:
 
         return res
 ```
+
+---
+# History
+Jan-15-2026 Solved, BFS w/o bug, explanation wasn’t clear
