--- a/content/03-LeetCode/Problems/1004.Max_Consecutive_Ones_III.md
+++ b/content/03-LeetCode/Problems/1004.Max_Consecutive_Ones_III.md
@@ -1,5 +1,9 @@
-[1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)
+---
+tags:
+  - ds/slidingwindow
+---
 # Question
+Link: [1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)
 ### Restate the problem
 - Given an array, contains binary numbers and an integer `k`, can flip at most `k` times zeros to ones. Return the max length of a subarray containing consecutive `1` after at most `k` flips.
 # Method
