--- a/content/03-LeetCode/Problems/133.Clone_Graph.md
+++ b/content/03-LeetCode/Problems/133.Clone_Graph.md
@@ -2,6 +2,7 @@
 tags:
   - ds/graphs
 redo: true
+weight: 133
 ---
 # Question
 Link: [133. Clone Graph](https://leetcode.com/problems/clone-graph/)
