--- a/content/03-LeetCode/Problems/200.Number_of_Islands.md
+++ b/content/03-LeetCode/Problems/200.Number_of_Islands.md
@@ -1,6 +1,7 @@
 ---
 tags:
   - ds/graphs
+weight: 200
 ---
 # Question
 Link: [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
