--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -252,10 +252,11 @@ Solve Type: Answer, bad explanation
 
 ### Jan-15
 #### Leetcode
-[[200.Number_of_Islands]]
+[[0200.Number_of_Islands]]
 - Solved, explanation was not clear
-[[217.Contains_Duplicate]] 
+[[0217.Contains_Duplicate]] 
 - Solved
-[[133.Clone_Graph]]
+[[0133.Clone_Graph]]
 - peeked, with strong hint
 	- node is used, name cur instead
+- [ ] need redo
