--- a/content/03-LeetCode/Problems/0133.Clone_Graph.md
+++ b/content/03-LeetCode/Problems/0133.Clone_Graph.md
@@ -1,7 +1,6 @@
 ---
 tags:
   - ds/graphs
-redo: true
 weight: 133
 ---
 # Question
@@ -53,5 +52,5 @@ class Solution:
 # Mistake
 - node is used, name cur instead
 # History
-- Jan-15-2026 peeked with strong hint
+- Jan-15-2026 peeked with strong hint (redo)
 
