--- a/content/03-LeetCode/Problems/0133.Clone_Graph.md
+++ b/content/03-LeetCode/Problems/0133.Clone_Graph.md
@@ -1,7 +1,8 @@
 ---
 tags:
   - ds/graphs
-weight: 133
+series:
+  - NeetCode150
 ---
 # Question
 Link: [133. Clone Graph](https://leetcode.com/problems/clone-graph/)
