--- a/content/03-LeetCode/Problems/0200.Number_of_Islands.md
+++ b/content/03-LeetCode/Problems/0200.Number_of_Islands.md
@@ -1,7 +1,8 @@
 ---
 tags:
   - ds/graphs
-weight: 200
+series:
+  - NeetCode150
 ---
 # Question
 Link: [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
