--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -259,4 +259,13 @@ Solve Type: Answer, bad explanation
 [[0133.Clone_Graph]]
 - peeked, with strong hint
 	- node is used, name cur instead
-- [ ] need redo
+- [x] need redo Jan-16
+
+### Jan-16
+Redo: 
+[[0133.Clone_Graph]] - forget edge case, should return `None`
+Review:
+[[0695.Max_Area_of_Island]] - Solved, debug
+[[0042.Trapping_Rain_Water]] - Solved, need clear explanation and clean code
+
+
