--- a/content/03-LeetCode/Problems/0071.Simplify_Path.md
+++ b/content/03-LeetCode/Problems/0071.Simplify_Path.md
@@ -3,8 +3,8 @@ tags:
   - ds/stack
 weight: 71
 ---
+Link: [71. Simplify Path](https://leetcode.com/problems/simplify-path/) - Medium
 # Question
-[71. Simplify Path](https://leetcode.com/problems/simplify-path/) - Medium
 ### Restate the problem
 Given a string, Unix-style absolute path, return simplified **canonical** path.
 ## Method
