--- a/content/03-LeetCode/Problems/0200.Number_of_Islands.md
+++ b/content/03-LeetCode/Problems/0200.Number_of_Islands.md
@@ -1,11 +1,10 @@
 ---
 tags:
   - ds/graphs
-series:
-  - NeetCode150
 ---
-# Question
 Link: [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
+Track: NeetCode150
+# Question
 ### Restate the problem
 - We're given a 2D grid of `'1'` and `'0'`, where`'1'` is land and `'0'` is water. 
 - An island is a group of land cells connected up/down/left/right.
