--- a/content/03-LeetCode/Problems/0217.Contains_Duplicate.md
+++ b/content/03-LeetCode/Problems/0217.Contains_Duplicate.md
@@ -2,8 +2,9 @@
 tags:
   - ds/hash
 ---
-# Question
 Link: [217. Contains Duplicate](https://leetcode.com/problems/contains-duplicate/)
+Track: NeetCode150
+# Question
 ### Restate the problem
 - Given an integer array nums, return boolean. Return True if any value appears at least twice, otherwise return False.
 # Method
