--- a/content/03-LeetCode/Problems/0695.Max_Area_of_Island.md
+++ b/content/03-LeetCode/Problems/0695.Max_Area_of_Island.md
@@ -4,8 +4,9 @@ tags:
 series:
   - NeetCode150
 ---
-# Question
 Link: [695. Max Area of Island](https://leetcode.com/problems/max-area-of-island/) - Medium
+Track: NeetCode150
+# Question
 ### Restate the problem
 - Given a 2d grid, with `0` and `1`. `1` is land, `0` is water.
 - An island is connected 4-directionally (up/down/left/right).
