--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -10,11 +10,6 @@ Solve Type: Answer, Do in 10mins
 4. **Let me test an edge case**, duplicate number or no solution
 ###### LC1636. Sort Array by Increasing Frequency
 Solve Type: Solution
-1. **Let me restate the problem**, give an integer array `nums`, sort the array so that lower frequency comes at first. if frequency is the same, return the larger value. Return the sorted array.
-2. **The key idea:** Count the frequency of each number with a hash map / `Counter`, then sort `nums` using a custom key: `(frequency[x], -x)`.
-3. **Time complexity** is O($nlogn$), Space Complexity is O(n)
-4. **Edge case:** Negative numbers / zero
-
 ###### LC1636. Extension Problem
 > Question:
 > - You are given an array logs, where each element represents an activity (or log) code. The same code may appear multiple times.
@@ -268,4 +263,5 @@ Review:
 [[0695.Max_Area_of_Island]] - Solved, debug
 [[0042.Trapping_Rain_Water]] - Solved, need clear explanation and clean code
 
-
+### Jan-17
+Review: [[0912.Sort_an_Array]] - Solved with bug, condition wrong
