--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,4 +1,12 @@
-Answer/Hint/Solution
+Solved/ Hinted/ Peeked
+### Jan-18
+Plan:
+- [x] [[1169.Invalid_Transactions]]: Peeked, with bug, need redo
+	- Mistake: compare each transaction under the same name, 
+- [ ] [[0207.Course_Schedule]]
+Required redo:
+- [ ] [[1169.Invalid_Transactions]]
+
 ### Jan-09
 #### Leetcode
 ###### LC1. Two Sum
@@ -265,3 +273,5 @@ Review:
 
 ### Jan-17
 Review: [[0912.Sort_an_Array]] - Solved with bug, condition wrong
+[[1636.Sort_Array_by_Increasing_Frequency]]
+
