--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,23 +1,20 @@
 Solved/ Hinted/ Peeked
+### Jan-19
+Plan:
+- [[0173.Binary_Search_Tree_Iterator]]
 ### Jan-18
 Plan:
-- [x] [[1169.Invalid_Transactions]]: Peeked, with bug, need redo
+- [[1169.Invalid_Transactions]]: Peeked, with bug, need redo
 	- Mistake: compare each transaction under the same name, 
-- [ ] [[0207.Course_Schedule]]
+- [[0207.Course_Schedule]]: Solved w/o bug, need improve explanation and edge case
+- [[0078.Subsets]]: Solved w bug, 1) boundary wrong 2)wrong time complexity 
 Required redo:
 - [ ] [[1169.Invalid_Transactions]]
 
 ### Jan-09
-#### Leetcode
-###### LC1. Two Sum
-Solve Type: Answer, Do in 10mins
-1. **Let me restate the problem,** give an integer array `nums` and an int `target`, need we to return the indices of the two numbers, sum number as same as target.
-	Each input has exactly one solution, may not use the same element twice.
-2. **The key idea:** iterate the array. For each number x, I compute `target - x`. If complement is already in hash map. I return the stored index and the current index. Otherwise, I store x->index in the map. 
-3. **Time complexity** is O(n), Space Complexity is O(n)
-4. **Let me test an edge case**, duplicate number or no solution
-###### LC1636. Sort Array by Increasing Frequency
-Solve Type: Solution
+Review:
+- [[0001_Two_Sum]] - Solved, Do in 10mins
+- [[1636.Sort_Array_by_Increasing_Frequency]] - Solved
 ###### LC1636. Extension Problem
 > Question:
 > - You are given an array logs, where each element represents an activity (or log) code. The same code may appear multiple times.
