--- a/content/03-LeetCode/Problems/1169.Invalid_Transactions.md
+++ b/content/03-LeetCode/Problems/1169.Invalid_Transactions.md
@@ -1,9 +1,8 @@
 ---
 tags:
-  - ds
+  - ds/hashmap
 ---
-Link: [1169. Invalid Transactions](https://leetcode.com/problems/invalid-transactions/)
-Track: NeetCode150
+Link: [1169. Invalid Transactions](https://leetcode.com/problems/invalid-transactions/) - Medium
 # Question
 ### Restate the problem
 Given a list of transaction, where each transaction is in the format`name, time, amount, city`
