--- a/content/03-LeetCode/Problems/0207.Course_Schedule.md
+++ b/content/03-LeetCode/Problems/0207.Course_Schedule.md
@@ -1,21 +1,62 @@
 ---
 tags:
-  - ds
+  - ds/graphs
 ---
 Link: [207. Course Schedule](https://leetcode.com/problems/course-schedule/)
 Track: NeetCode150
 # Question
 ### Restate the problem
+Given an integer number of courses and a list of prerequisite pairs
+Each pair `b->a` means course `b` must be taken before course `a`
+Return whether it is possible to finish all courses
 # Method
-### Approach
+### Approach - graph `topological sort`
+- Build a directed graph where an edge `pre -> course`
+- An `indegree` array to record the number of prerequisites for each course
 
+- Initialize a queue with all courses that have `indegree` 0
+- While the queue is not empty:
+    - Pop one course from the queue (this course is completed)
+    - For each neighboring course:
+        - Decrease its `indegree`
+        - If `indegree` becomes 0, add it to the queue
+- If all courses are processed, return true; otherwise, return false
 ### Complexity
-
+- Time Complexity: O(V+E)
+- Space Complexity: **O(V+E)**
+	- e.g., graph = `{0:[1], 1:[]}`, store edge
 ### Edge Case
-
+- numCourses = 0 → return true
+- **cycle course**
 ### Code        
 ```python
+class Solution:
+    def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
+        graph = defaultdict(list)
+        indegree = [0] * numCourses
+        visited = set()
+        
+        for course, precourse in prerequisites:
+            graph[precourse].append(course)
+            indegree[course] += 1
+        
+        queue = deque()
+        for idx, count in enumerate(indegree):
+            if count == 0:
+                queue.append(idx)
+                
+        while queue:
+            cur = queue.popleft()
+            visited.add(cur)
+            for nei in graph[cur]:
+                indegree[nei] -= 1
+                if indegree[nei] == 0:
+                    queue.append(nei)
+                    # visited.add(nei)
+        
+        return len(visited) == numCourses
 ```
 
 ---
 # History
+Jan-18-2026 solved w/o bug, clear explanation - directed graph, wrong space $O(V+E)$
