--- a/content/03-LeetCode/Problems/1636.Sort_Array_by_Increasing_Frequency.md
+++ b/content/03-LeetCode/Problems/1636.Sort_Array_by_Increasing_Frequency.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds
+  - ds/sort
 ---
 Link: [1636. Sort Array by Increasing Frequency](https://leetcode.com/problems/sort-array-by-increasing-frequency/)
 # Question
