--- a/content/03-LeetCode/Problems/1004.Max_Consecutive_Ones_III.md
+++ b/content/03-LeetCode/Problems/1004.Max_Consecutive_Ones_III.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/slidingwindow
+  - ds/slidingw
 weight: 1004
 ---
 Link: [1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)
