--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,7 +1,9 @@
 Solved/ Hinted/ Peeked
 ### Jan-19
 Plan:
-- [[0173.Binary_Search_Tree_Iterator]]
+- [[0173.Binary_Search_Tree_Iterator]] Solved dfs method, Hinted stack method
+Redo:
+- [ ] [[0173.Binary_Search_Tree_Iterator]] redo use stack
 ### Jan-18
 Plan:
 - [[1169.Invalid_Transactions]]: Peeked, with bug, need redo
