--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,7 +1,8 @@
 Solved/ Hinted/ Peeked
 ### Jan-19
-Plan:
+Done:
 - [[0173.Binary_Search_Tree_Iterator]] Solved dfs method, Hinted stack method
+- [[0005.Longest_Palindromic_Substring]] Solved w bug, forget to restore pointer
 Redo:
 - [ ] [[0173.Binary_Search_Tree_Iterator]] redo use stack
 ### Jan-18
@@ -14,7 +15,7 @@ Required redo:
 - [ ] [[1169.Invalid_Transactions]]
 ### Jan-09
 Review:
-- [[0001_Two_Sum]] - Solved, Do in 10mins
+- [[0001.Two_Sum]] - Solved, Do in 10mins
 - [[1636.Sort_Array_by_Increasing_Frequency]] - Solved
 ###### LC1636. Extension Problem
 > Question:
@@ -135,16 +136,7 @@ Mistake:
 	- Space: O(m), m is unique numbers
 4. Edge case: `k` is larger than `len(nums)`
 
-###### LC5. Longest Palindromic Substring
-[5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/)
-Solve Type: Answer. but spend time on debug
-Mistake: *incorrectly initialized* `max_len` to 0
-
-1. Restate the problem: Give a string, consists only of lowercase English letters. Return the longest contiguous substring that is palindrome
-	*palindromic*: it reads the same forwards and backwards. mirrors around its center.
-2. key point: *Every palindrome is built by expanding from its center.
-3. Time Complexity: O(n^2) Space: *O(1)* no extra memory
-4. Edge case: if all character is unique, return first one
+- [[0005.Longest_Palindromic_Substring]] Solved: incorrectly initialized `max_len` to 0
 
 #### BQ: Introduction
 Hi, my name is Alan. I am currently a second-year master student in Computer Science at Northeastern University. 
