--- a/content/03-LeetCode/Problems/0173.Binary_Search_Tree_Iterator.md
+++ b/content/03-LeetCode/Problems/0173.Binary_Search_Tree_Iterator.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds
+  - ds/tree
 ---
 Link: [173. Binary Search Tree Iterator](https://leetcode.com/problems/binary-search-tree-iterator/) - Medium
 # Question
@@ -33,9 +33,8 @@ Use `stack` to simulate the recursion and a point `cur` to traverse
 class BSTIterator:
 
     def __init__(self, root: Optional[TreeNode]):
-        self.root = root
         self.stack = []
-        self.cur = self.root
+        self.cur = root
 
     def next(self) -> int:
         while self.stack or self.cur:
