--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,18 +1,22 @@
 Solved/ Hinted/ Peeked
 ### Jan-19
 Done:
-- [[0173.Binary_Search_Tree_Iterator]] Solved dfs method, Hinted stack method
+- [[0173.Binary_Search_Tree_Iterator]] Solved DFS method, Hinted stack method
 - [[0005.Longest_Palindromic_Substring]] Solved w bug, forget to restore pointer
-Redo:
+
+Redo:  
 - [ ] [[0173.Binary_Search_Tree_Iterator]] redo use stack
+
 ### Jan-18
 Plan:
 - [[1169.Invalid_Transactions]]: Peeked, with bug, need redo
 	- Mistake: compare each transaction under the same name, 
 - [[0207.Course_Schedule]]: Solved w/o bug, need improve explanation and edge case
 - [[0078.Subsets]]: Solved w bug, 1) boundary wrong 2)wrong time complexity 
-Required redo:
+
+Required redo:  
 - [ ] [[1169.Invalid_Transactions]]
+
 ### Jan-09
 Review:
 - [[0001.Two_Sum]] - Solved, Do in 10mins
@@ -137,15 +141,6 @@ Mistake:
 4. Edge case: `k` is larger than `len(nums)`
 
 - [[0005.Longest_Palindromic_Substring]] Solved: incorrectly initialized `max_len` to 0
-
-#### BQ: Introduction
-Hi, my name is Alan. I am currently a second-year master student in Computer Science at Northeastern University. 
-
-Before my studies here, I graduated from the University of Sydney with a degree in Finance and Big Data, and I also completed a bachelor’s degree in Accounting.
-
-After graduation, I gained about five years of woking experience. I worked as a consultant at Cubewise, which is an IBM partner, and then joined Deloitte as a consultant focused more on data and digital transformation. More recently work experience, I moved into a software engineering role at a financial firm.
-
-Across these experiences, I really enjoyed full-stack development and creating engaging AI applications. I am looking for an internship where I can apply my skills and gaining hands-on experience.
 
 ### Jan-11
 #### Leetcode
