--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -3,9 +3,14 @@ Solved/ Hinted/ Peeked
 Done:
 - [[0173.Binary_Search_Tree_Iterator]] Solved DFS method, Hinted stack method
 - [[0005.Longest_Palindromic_Substring]] Solved w bug, forget to restore pointer
+- [[1507.Reformat_Date]] hinted, don't know `zfill`
+- [[0014.Longest_Common_Prefix]] Solved, need clear explanation
+- [[0236.Lowest_Common_Ancestor of a Binary_Tree]] Solved w bug, bad explanation
+- [[0543.Diameter_of_Binary_Tree]] Peeked, no idea, use global variable
 
 Redo:  
 - [ ] [[0173.Binary_Search_Tree_Iterator]] redo use stack
+- [ ] [[0543.Diameter_of_Binary_Tree]] redo
 
 ### Jan-18
 Plan:
@@ -143,18 +148,7 @@ Mistake:
 - [[0005.Longest_Palindromic_Substring]] Solved: incorrectly initialized `max_len` to 0
 
 ### Jan-11
-#### Leetcode
-###### LC14. Longest Common Prefix - easy
-[14. Longest Common Prefix](https://leetcode.com/problems/longest-common-prefix/)
-Solve Type: Answer with bug. and not optimal
-
-Mistake: cal min length in list should use `min(len(s) for s in strs)`
-1. Restate: Given *a list of* multiple lowercase strings, find the longes prefix that all of them share. Return the common prefix string.
-2. Key idea: *Scan* from left to right, all strings must have the same characters as `str[0][i]`. The first mismatch means we have reached the end of the common prefix.
-3. Complexity
-	- Time complexity: O($m*n$)  `m = min length`, `n = number of strings`
-	- Space: O(n)
-4. Edge case: if "" in strs or no strs
+- [[0014.Longest_Common_Prefix]] Solve Type: Answer with bug. and not optimal
 
 Explain sliding window `[left, right]`: two types of sliding window, fixed-size and variable-size. 
 - Expend window, move right to include a new element into window
