--- a/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
+++ b/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
@@ -1,6 +1,9 @@
 ---
 tags:
   - ds/tp
+  - cm/adobe
+company:
+  - Adobe
 ---
 Link: [5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/) - Medium
 Track: NeetCode150
