--- a/content/03-LeetCode/Problems/0014.Longest_Common_Prefix.md
+++ b/content/03-LeetCode/Problems/0014.Longest_Common_Prefix.md
@@ -1,7 +1,9 @@
 ---
 tags:
   - ds
-company: Adobe
+  - cm/adobe
+company:
+  - Adobe
 ---
 Link: [14. Longest Common Prefix](https://leetcode.com/problems/longest-common-prefix/)
 # Question
