--- a/content/03-LeetCode/Problems/0236.Lowest_Common_Ancestor of a Binary_Tree.md
+++ b/content/03-LeetCode/Problems/0236.Lowest_Common_Ancestor of a Binary_Tree.md
@@ -1,11 +1,11 @@
 ---
 tags:
   - ds/tree
+  - cm/adobe
 company:
   - Adobe
 ---
-
-Link: 
+Link: [236. Lowest Common Ancestor of a Binary Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/) - Medium
 Track: NeetCode150
 # Question
 ### Restate the problem
