--- a/content/03-LeetCode/Problems/0001.Two_Sum.md
+++ b/content/03-LeetCode/Problems/0001.Two_Sum.md
@@ -1,6 +1,9 @@
 ---
 tags:
   - ds/hashmap
+  - cm/adobe
+company:
+  - Adobe
 ---
 Link: [1. Two Sum](https://leetcode.com/problems/two-sum/)
 Track: NeetCode150
