--- a/content/03-LeetCode/Problems/0042.Trapping_Rain_Water.md
+++ b/content/03-LeetCode/Problems/0042.Trapping_Rain_Water.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/tp
+  - ds/twop
 ---
 Link: [42. Trapping Rain Water](https://leetcode.com/problems/trapping-rain-water/) - Hard
 Track: NeetCode150
