--- a/content/03-LeetCode/Problems/0217.Contains_Duplicate.md
+++ b/content/03-LeetCode/Problems/0217.Contains_Duplicate.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/hashmap
+  - ds/hashm
 ---
 Link: [217. Contains Duplicate](https://leetcode.com/problems/contains-duplicate/)
 Track: NeetCode150
