--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,4 +1,10 @@
 Solved/ Hinted/ Peeked
+### Jan-20
+Done:
+- [[0049.Group_Anagrams]] Solved w bug
+	1) `''.join(string)` better to use `tuple(counts)`
+	2) `from collections import defaultdict`
+- 
 ### Jan-19
 Done:
 - [[0173.Binary_Search_Tree_Iterator]] Solved DFS method, Hinted stack method
