--- a/content/03-LeetCode/Problems/1169.Invalid_Transactions.md
+++ b/content/03-LeetCode/Problems/1169.Invalid_Transactions.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/hashmap
+  - ds/hashm
 ---
 Link: [1169. Invalid Transactions](https://leetcode.com/problems/invalid-transactions/) - Medium
 # Question
