--- a/content/03-LeetCode/Problems/0543.Diameter_of_Binary_Tree.md
+++ b/content/03-LeetCode/Problems/0543.Diameter_of_Binary_Tree.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds
+  - ds/tree
 ---
 Link: [543. Diameter of Binary Tree](https://leetcode.com/problems/diameter-of-binary-tree/)
 Track: NeetCode150
