--- a/content/03-LeetCode/Problems/0042.Trapping_Rain_Water.md
+++ b/content/03-LeetCode/Problems/0042.Trapping_Rain_Water.md
@@ -6,10 +6,10 @@ Link: [42. Trapping Rain Water](https://leetcode.com/problems/trapping-rain-wate
 Track: NeetCode150
 # Question
 ### Restate the problem
-- Given an integer array, means the bar heights
-- The water level is determined by `min(left_max, right_max)`
-- `max(0, min(highest_left, highest_right) - height[i])`
-- Return the total trapped water
+Given an integer array, means the bar heights
+The water level is determined by `min(left_max, right_max)`
+`max(0, min(highest_left, highest_right) - height[i])`
+Return the total trapped water
 # Method
 ### Approach - Two pointers
 - Set `left = 0`, `right = n - 1`
