--- a/content/03-LeetCode/Problems/0014.Longest_Common_Prefix.md
+++ b/content/03-LeetCode/Problems/0014.Longest_Common_Prefix.md
@@ -5,7 +5,7 @@ tags:
 company:
   - Adobe
 ---
-Link: [14. Longest Common Prefix](https://leetcode.com/problems/longest-common-prefix/)
+Link: [14. Longest Common Prefix](https://leetcode.com/problems/longest-common-prefix/) - easy
 # Question
 ### Restate the problem
 
