--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -11,7 +11,7 @@ Done:
 - [[0005.Longest_Palindromic_Substring]] Solved w bug, forget to restore pointer
 - [[1507.Reformat_Date]] hinted, don't know `zfill`
 - [[0014.Longest_Common_Prefix]] Solved, need clear explanation
-- [[0236.Lowest_Common_Ancestor of a Binary_Tree]] Solved w bug, bad explanation
+- [[0236.Lowest_Common_Ancestor_of_BT]] Solved w bug, bad explanation
 - [[0543.Diameter_of_Binary_Tree]] Peeked, no idea, use global variable
 
 Redo:  
