--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,11 +1,16 @@
 Solved/ Hinted/ Peeked
+### Jan-21
+- [[3528.Unit_Conversion_I]] Peeked
+- [[1863.Sum_of_All_Subset_XOR_Totals]] Peeked
+- 
+
 ### Jan-20
 Done:
 - [[0049.Group_Anagrams]] Solved w bug
 	1) `''.join(string)` better to use `tuple(counts)`
 	2) `from collections import defaultdict`
 - [[0545.Boundary_of_Binary_Tree]] Peeked
-- [[0735.Asteroid_Collision]] Peeked
+- [[0735.Asteroid_Collision]] Peeked, need `alive`flag, redo in the future
 ### Jan-19
 Done:
 - [[0173.Binary_Search_Tree_Iterator]] Solved DFS method, Hinted stack method
