--- a/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
+++ b/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
@@ -6,6 +6,7 @@ company:
   - Adobe
 ---
 Link: [5. Longest Palindromic Substring](https://leetcode.com/problems/longest-palindromic-substring/) - Medium
+
 Track: NeetCode150
 # Question
 ### Restate the problem
@@ -16,9 +17,9 @@ Return the longest contiguous *substring* that is palindrome.
 
 ---
 
-Method 1: Two pointer (Optimal)
-Method 2: Brute Force, check every possible substring. take O($n^3$)
-## Method 1: two pointer
+Method 1: Brute Force, check every possible substring. take O($n^3$)
+Method 2: Expand around the center
+## Method: Expand around the center
 ### Approach
 Every palindrome can be expanded from its **center**.
 
