--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -2,7 +2,8 @@ Solved/ Hinted/ Peeked
 ### Jan-21
 - [[3528.Unit_Conversion_I]] Peeked
 - [[1863.Sum_of_All_Subset_XOR_Totals]] Peeked
-- 
+- [[0093.Restore_IP_Addresses]] Peeked
+- [[0155.Jump_Game]] Solved w bug
 
 ### Jan-20
 Done:
