--- a/content/03-LeetCode/Problems/0093.Restore_IP_Addresses.md
+++ b/content/03-LeetCode/Problems/0093.Restore_IP_Addresses.md
@@ -3,21 +3,31 @@ tags:
   - ds/backt
   - cm/adobe
 ---
-Link: 
-Track: NeetCode150
+Link: [93. Restore IP Addresses](https://leetcode.com/problems/restore-ip-addresses/) - Medium
 # Question
 ### Restate the problem
+Given s, contains only digit
+Return possible IP address
+Process: segment IP address, between 0 and 255, no leading `0`
 
 ---
 
-Method 1
-Method 2
-## Method
+Method 1 Pointer: not apply, Because pointer keep moving, hard to tell which cuts can be vallid.
+Method 2 Backtracking. Choose a segment length
+## Method - Backtracking
 ### Approach
-(discussed at lease two approach?)
+- `dfs(idx, path)`
+- Base case: 
+	- if `idx > n`, return
+	- if `idx == n and len(path) == 4`, append, return
+- Try segment length(1, 2, 3)
+	- next_idx = idx + length
+	- `segment = s[idx: next_idx]`
+	- if is_valid(segment): choose it and recurse `backtrack(next_idx, segment + [segment])`
 
 ### Complexity
-
+- Time Complexity: O($3^4$) constant time
+- Space Complexity: O(1)
 ### Edge Case
 
 ### Code        
