--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,4 +1,18 @@
 Solved/ Hinted/ Peeked
+
+Jan-22-2026 
+
+[[0056.Merge_Intervals]] 
+- Solved w bug not familiar the interval
+
+[[0402.Remove_K_Digits]]
+Jan-22-2026 Solved w bug, took too long time
+- `digital string` can compare
+- use `while` to deal with stack
+- `join()` only work with strings
+- `lstrip()` only work with strings, to eliminate `'0'`
+
+---
 ### Jan-21
 - [[3528.Unit_Conversion_I]] Peeked
 - [[1863.Sum_of_All_Subset_XOR_Totals]] Peeked
