--- a/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
+++ b/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
@@ -29,7 +29,7 @@ Every palindrome can be expanded from its **center**.
 - Track the maximum length and record the substring
 ### Complexity
 - Time Complexity: O($n^2$)
-- Space Complexity: O(1)
+- Space Complexity: O(1) (excluding output)
 ### Edge Case
 - Empty string → return `""`
 ### Code        
@@ -66,4 +66,7 @@ class Solution:
 
 ---
 # History
+Jan-22-2026 Solved w bug
+- Wrote the `odd_pointer` update incorrectly.
+
 Jan-19-2026 Solved w bug, forget to restore pointer
