--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,6 +1,8 @@
 Solved/ Hinted/ Peeked
 
-Jan-22-2026 
+### Jan-23
+- [[0417.Pacific_Atlantic_Water_Flow]]
+### Jan-22
 
 [[0056.Merge_Intervals]] 
 - Solved w bug not familiar the interval
@@ -12,6 +14,18 @@ Jan-22-2026 Solved w bug, took too long time
 - `join()` only work with strings
 - `lstrip()` only work with strings, to eliminate `'0'`
 
+[[0146.LRU_Cache]] Hinted w bug
+- `class Node`, add key, val, prev, next
+- `put` update key val as well. if exist, remove then add
+- In function`_add`, forget to add node.prev 
+
+[[0031.Next_Permutation]] Peeked
+- do not know the solution
+- `array.reverse()` is in place, `revered(arr)` need assign to a variable
+
+Redo
+- [ ] [[0402.Remove_K_Digits]]
+
 ---
 ### Jan-21
 - [[3528.Unit_Conversion_I]] Peeked
@@ -19,6 +33,8 @@ Jan-22-2026 Solved w bug, took too long time
 - [[0093.Restore_IP_Addresses]] Peeked
 - [[0155.Jump_Game]] Solved w bug
 
+Review:
+- [ ] [[3528.Unit_Conversion_I]] Jan-22
 ### Jan-20
 Done:
 - [[0049.Group_Anagrams]] Solved w bug
