--- a/content/03-LeetCode/Problems/0155.Jump_Game.md
+++ b/content/03-LeetCode/Problems/0155.Jump_Game.md
@@ -1,9 +1,11 @@
 ---
 tags:
-  - cm/adobe
   - ds/dp
+  - cm/adobe
+company:
+  - Adobe
 ---
-Link: 
+Link: [55. Jump Game](https://leetcode.com/problems/jump-game/) - Medium
 
 # Question
 ### Restate the problem
@@ -11,8 +13,8 @@ Link:
 ---
 
 Method 1
-Method 2
-## Method
+Method 2 - Greedy
+## Method - Greedy
 ### Approach
 (discussed at lease two approach?)
 
