--- a/content/03-LeetCode/Problems/0200.Number_of_Islands.md
+++ b/content/03-LeetCode/Problems/0200.Number_of_Islands.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/graphs
+  - ds/graph
 ---
 Link: [200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
 Track: NeetCode150
