--- a/content/03-LeetCode/Problems/0207.Course_Schedule.md
+++ b/content/03-LeetCode/Problems/0207.Course_Schedule.md
@@ -1,6 +1,6 @@
 ---
 tags:
-  - ds/graphs
+  - ds/graph
 ---
 Link: [207. Course Schedule](https://leetcode.com/problems/course-schedule/)
 Track: NeetCode150
