--- a/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
+++ b/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
@@ -5,24 +5,25 @@ tags:
 company:
   - Adobe
 ---
-Link: 
+Link: [402. Remove K Digits](https://leetcode.com/problems/remove-k-digits/) - Medium
 Track: NeetCode150
 # Question
 ### Restate the problem
+- Given string `num` that represents a **non-negative integer** (like `"1432219"`) and an integer `k`
+- Return the answer as a **string**, and it must **not have leading zeros**
+- remove exactly `k` digits, so the resulting number is **as small as possible**.
 
 ---
 
 Method 1
 Method 2
-## Method
+## Method - Stack
 ### Approach - monotonic increasing stack
 - Use stack to keep digits:
     - Scan digits left → right.
     - While `k > 0` and `stack[-1] > ch`, pop the stack (remove that larger digit), decrement `k`.
     - Push `ch`.
-        
 - **If k is still > 0 after the scan**, remove from the end (`stack[:-k]`) because the number is already increasing, so the tail digits are the best to delete.
-    
 - Result: `res = ''.join(stack).lstrip('0')`; if empty return `"0"`
 
 ### Complexity
