--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -2,8 +2,8 @@ Solved/ Hinted/ Peeked
 
 ### Jan-23
 - [[0417.Pacific_Atlantic_Water_Flow]]
+- [[1004.Max_Consecutive_Ones_III]]
 ### Jan-22
-
 [[0056.Merge_Intervals]] 
 - Solved w bug not familiar the interval
 
