--- a/content/03-LeetCode/Problems/1004.Max_Consecutive_Ones_III.md
+++ b/content/03-LeetCode/Problems/1004.Max_Consecutive_Ones_III.md
@@ -6,7 +6,9 @@ weight: 1004
 Link: [1004. Max Consecutive Ones III](https://leetcode.com/problems/max-consecutive-ones-iii/)
 # Question
 ### Restate the problem
-- Given an array, contains binary numbers and an integer `k`, can flip at most `k` times zeros to ones. Return the max length of a subarray containing consecutive `1` after at most `k` flips.
+- Given an array, 
+- Contains binary numbers and an integer `k`, can flip at most `k` times zeros to ones. 
+- Return the max length of a subarray containing consecutive `1` after at most `k` flips.
 # Method
 ### Key idea: Sliding window
 Invariant: right - left + 1 <= count_1 + k
@@ -29,11 +31,11 @@ class Solution:
         zeros = 0
         left = right = 0
         while right < len(nums):
-            if nums[right] == 1:
+            if nums[right] == 0:
                 zeros += 1
             
-            if right - left + 1 > zeros + k:
-                if nums[left] == 1:
+            while zeros > k:
+                if nums[left] == 0:
                     zeros -= 1
                 left += 1
             
@@ -42,3 +44,8 @@ class Solution:
         
         return res
 ```
+
+---
+# History
+Jan-23-2026 Solved
+- Inclusive window: length = right_idx − left_idx + 1
