--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,8 +1,15 @@
 Solved/ Hinted/ Peeked
 
 ### Jan-23
-- [[0417.Pacific_Atlantic_Water_Flow]]
-- [[1004.Max_Consecutive_Ones_III]]
+[[0005.Longest_Palindromic_Substring]] solved w bug
+[[0417.Pacific_Atlantic_Water_Flow]]
+[[1004.Max_Consecutive_Ones_III]]
+[[0049.Group_Anagrams]] solved
+[[0014.Longest_Common_Prefix]] hinted
+- only need `min_length`
+- don't know how to cal the `min_length`
+- `min_len = min(len(word) for word in strs)`
+[[1636.Sort_Array_by_Increasing_Frequency]]
 ### Jan-22
 [[0056.Merge_Intervals]] 
 - Solved w bug not familiar the interval
