--- a/content/03-LeetCode/Problems/0014.Longest_Common_Prefix.md
+++ b/content/03-LeetCode/Problems/0014.Longest_Common_Prefix.md
@@ -8,6 +8,7 @@ company:
 Link: [14. Longest Common Prefix](https://leetcode.com/problems/longest-common-prefix/) - easy
 # Question
 ### Restate the problem
+- Find the **longest common prefix** among the strings
 
 ---
 
@@ -47,4 +48,9 @@ class Solution:
 
 ---
 # History
+Jan-23-2026 Hinted
+- only need `min_length`
+- don't know how to cal the `min_length`
+- `min_len = min(len(word) for word in strs)`
+
 Jan-19-2026 Solved, need clear explanation
