--- a/content/03-LeetCode/Problems/0049.Group_Anagrams.md
+++ b/content/03-LeetCode/Problems/0049.Group_Anagrams.md
@@ -62,6 +62,9 @@ class Solution:
 
 ---
 # History
+Jan-23-2026 Solved
+- Time complexity wrong should be `n*k`, `n words * k characters`
+
 Jan-20-2026 Solved w bug
 1) `''.join(string)` better to use `tuple(counts)`
 2) `from collections import defaultdict`
