--- a/content/03-LeetCode/Problems/1636.Sort_Array_by_Increasing_Frequency.md
+++ b/content/03-LeetCode/Problems/1636.Sort_Array_by_Increasing_Frequency.md
@@ -6,8 +6,12 @@ Link: [1636. Sort Array by Increasing Frequency](https://leetcode.com/problems/s
 # Question
 ### Restate the problem
 Give an integer array `nums`, sort the array so that lower frequency comes first. if frequency is the same, return the larger value. Return the sorted array.
-## Method 1 - built-in sort
-### Approach 1
+
+---
+Method 1 - hashmap + heap
+Method 2 - hashmap + sort
+## Method - built-in sort
+### Approach
 Count the frequency of each number with a hash map / `Counter`, then sort `nums` using a custom key: `(frequency[x], -x)`
 ### Complexity
 - Time complexity is O($nlogn$)
@@ -34,8 +38,10 @@ class Solution:
     def frequencySort(self, nums: List[int]) -> List[int]:
         freq = Counter(nums)
         heap = []
-        for num, count in freq.items():
-            heapq.heappush(heap, (count, -num))
+        
+        # time is O(nlogn)
+        for num, count in freq.items(): # O(n)
+            heapq.heappush(heap, (count, -num)) # O(logn)
         
         res = []
         while heap:
@@ -49,4 +55,7 @@ class Solution:
 
 ---
 # History
+Jan-24-2026 Solved
+- heap not familiar
+
 Jan-17-2026 Solved, use both method
