--- a/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
+++ b/content/03-LeetCode/Problems/0005.Longest_Palindromic_Substring.md
@@ -67,6 +67,9 @@ class Solution:
 ---
 # History
 Jan-22-2026 Solved w bug
+- `return` indentation
+
+Jan-22-2026 Solved w bug
 - Wrote the `odd_pointer` update incorrectly.
 
 Jan-19-2026 Solved w bug, forget to restore pointer
