--- a/content/03-LeetCode/Problems/0093.Restore_IP_Addresses.md
+++ b/content/03-LeetCode/Problems/0093.Restore_IP_Addresses.md
@@ -12,7 +12,7 @@ Process: segment IP address, between 0 and 255, no leading `0`
 
 ---
 
-Method 1 Pointer: not apply, Because pointer keep moving, hard to tell which cuts can be vallid.
+Method 1 Pointer: not apply, Because pointer keep moving, hard to tell which cuts can be valid.
 Method 2 Backtracking. Choose a segment length
 ## Method - Backtracking
 ### Approach
@@ -29,55 +29,46 @@ Method 2 Backtracking. Choose a segment length
 - Time Complexity: O($3^4$) constant time
 - Space Complexity: O(1)
 ### Edge Case
-
+- `[0, 0, 0, 0]`
 ### Code        
 ```python
 class Solution:
     def restoreIpAddresses(self, s: str) -> List[str]:
+        address = []
         n = len(s)
- 
-        def valid_part(part):
-            num = int(part)
-            if not (0 <= num <= 255):
-                return False
-
-            if len(part) > 1 and part[0] == '0':
-                return False
-            
-            return True
-
-        segment = []
-        def dfs(start, path):
+        def dfs(idx, path):
             if len(path) > 4:
                 return
 
-            if start == n and len(path) == 4: 
-                segment.append(path[:])
+            if idx == n and len(path) == 4:
+                address.append(".".join(path))
                 return
-            
-            for j in (1, 2, 3): # 0:1, 0:2, 0:3
-                end = start + j # end is next start point
-                if end > n:
+
+            for length in (1, 2, 3):
+                part = s[idx: idx + length]
+                if idx + length > n:
                     break
 
-                part = s[start: end]
+                if part[0] == "0" and len(part) > 1:
+                    continue 
                 
-                if valid_part(part):
-                    path.append(part)
-                    dfs(end, path)
-                    path.pop()
+                if int(part) > 255:
+                    continue
 
+                path.append(s[idx: idx + length])
+                dfs(idx + length, path)
+                path.pop()
+        
         dfs(0, [])
-
-        res = []
-        for address in segment:
-            res.append(".".join(address))
-
-        return res
+        return address
 ```
 
 ---
 # History
+Jan-24-2026 Peeked
+- did not add enough cut branch
+- if `idx = n`, means correct answer
+
 Jan-21-2026 Hinted
 - Spent a long time on deciding correct algorithm
 - Got stuck on Boundary, `end` better to set as the next start 
