--- a/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
+++ b/content/03-LeetCode/Problems/0402.Remove_K_Digits.md
@@ -55,6 +55,9 @@ class Solution:
 
 ---
 # History
+Jan-24-2026 Solved w bug
+- `lstrip` only works on `str`
+
 Jan-22-2026 Solved w bug, took too long time
 - `digital string` can compare
 - use `while` to deal with stack
