--- a/content/03-LeetCode/Problems/1507.Reformat_Date.md
+++ b/content/03-LeetCode/Problems/1507.Reformat_Date.md
@@ -1,22 +1,28 @@
 ---
 tags:
-  - ds
+  - cm/adobe
 ---
-Link: [1507. Reformat Date](https://leetcode.com/problems/reformat-date/)
-Track: NeetCode150
+Link: [1507. Reformat Date](https://leetcode.com/problems/reformat-date/) - Easy
 # Question
 ### Restate the problem
-
+We’re given a date string in the format **“Day Month Year”**, like `"20th Oct 2052"`.  
+We need to convert it to the standardized numeric format **“YYYY-MM-DD”**, where the month is a two-digit number and the day is two digits (with leading zeros if needed).
 
 ---
 
 Method 1 
-Method 2 
+Method 2 - Hashmap + split + slicing
 ## Method
 ### Approach
-
+- For this problem, I first **split** the input string into three parts: day, month, and year.  
+- For the **day**, I remove the suffix like _st/nd/rd/th_ and keep only the digits, then **zero-pad** it to two digits.  
+- For the **month**, I use a **hash map** to convert the month abbreviation (e.g., Jan, Feb) into a two-digit number.  
+- The **year** stays the same.  
+- Finally, I concatenate them in the format **`YYYY-MM-DD`**.
 ### Complexity
-
+- Time complexity: O(n)
+	- split: O(n)
+- Space complexity: O(n)
 ### Edge Case
 
 ### Code        
@@ -38,4 +44,6 @@ class Solution:
 
 ---
 # History
+Jan-24-2026 Solved
+
 Jan-19-2026 hinted don't know `zfill`
