--- a/content/03-LeetCode/Daily-Log/Jan-2026.md
+++ b/content/03-LeetCode/Daily-Log/Jan-2026.md
@@ -1,4 +1,6 @@
 Solved/ Hinted/ Peeked
+### Jan-24
+[[0189.Rotate_Array]] hinted
 
 ### Jan-23
 [[0005.Longest_Palindromic_Substring]] solved w bug
@@ -10,6 +12,7 @@ Solved/ Hinted/ Peeked
 - don't know how to cal the `min_length`
 - `min_len = min(len(word) for word in strs)`
 [[1636.Sort_Array_by_Increasing_Frequency]]
+
 ### Jan-22
 [[0056.Merge_Intervals]] 
 - Solved w bug not familiar the interval
